Atualizando o projeto novas paginas

--- a/contato.html
+++ b/contato.html
@@ -28,6 +28,27 @@
                 <div class="content">
                     Content
                     <!-- Aqui vai o seu conteúdo -->
+
+                    <p>Os telefones de contato (celular e whatsapp)</p>
+                    <p>Endereço completo da clínica</p>
+                    <p>Um Iframe com o Google Maps apontando o endereço da clínica</p>
+                    <form>
+                        <label fro="">Nome:</label>
+                        <input type="text" id="nome" name="nome">
+                        <br>
+                        <label fro="">E-mail:</label>
+                        <input type="email" id="email" name="email">
+                        <br>
+                        <label fro="">Assunto:</label>
+                        <input type="text" id="assunto" name="assunto">
+                        <br>
+                        <label fro="">Mensagem:</label><br>
+                        <textarea cols="30" rows="5"></textarea><br> 
+                        <br>
+                        <input type="submit" value="Enviar">
+                        <input type="reset" value="Limpar">
+                        <br>
+                    </form>
                 </div>
         
                 <div class="footer">
