Atualizando o projeto com alguns conteudos

--- a/contato.html
+++ b/contato.html
@@ -26,11 +26,14 @@
                 </div>
         
                 <div class="content">
-                    Content
                     <!-- Aqui vai o seu conteúdo -->
-
-                    <p>Os telefones de contato (celular e whatsapp)</p>
-                    <p>Endereço completo da clínica</p>
+                    <h2>Os telefones de contato:</h2>
+                    <p>Celular/Whatsapp: (11) 99123-4567</p>
+                    <h2>Endereço:</h2>
+                    <p>Rua das Flores, 123</p>
+                    <p>Bairro Harmonia</p>
+                    <p>Cidade Nova Esperança - CEP: 12345-678 - UF: SP</p>
+                    <h2>Como chegar:</h2>
                     <p>Um Iframe com o Google Maps apontando o endereço da clínica</p>
                     <form>
                         <label fro="">Nome:</label>
@@ -52,8 +55,17 @@
                 </div>
         
                 <div class="footer">
-                    Footer
                     <!-- Aqui vai o seu rodapé -->
+                    <div>
+                        <h3>Siga-nos</h3>
+                        <ul>
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Twitter</a></li>
+                            <li><a href="#">Instagram</a></li>
+                        </ul>
+                    </div>
+                    <!-- Aqui vai o seu rodapé -->
+                    <p>&copy; 2024 Centro Médico Vida Plena. Todos os direitos reservados.</p>
                 </div>
             </div>
         </div>
