--- a/index.html
+++ b/index.html
@@ -26,13 +26,22 @@
                 </div>
         
                 <div class="content">
-                    Content
                     <!-- Aqui vai o seu conteúdo -->
+                    <h1>Centro Médico Vida Plena</h1>
+                    <p style="text-align: justify;">O Centro Médico Vida Plena é uma clínica moderna que oferece uma ampla gama de serviços médicos e de bem-estar. Com uma equipe de profissionais qualificados, incluindo médicos de família, especialistas e terapeutas, a clínica proporciona cuidados abrangentes e personalizados para pacientes de todas as idades. Além de tratamentos médicos, o Centro Médico Vida Plena oferece programas de promoção da saúde, como orientação nutricional e apoio emocional, visando não apenas tratar doenças, mas também promover um estilo de vida saudável. Seu objetivo é ser a principal escolha para cuidados de saúde na comunidade, oferecendo atendimento compassivo, confiável e de alta qualidade.</p>
                 </div>
         
                 <div class="footer">
-                    Footer
+                    <div>
+                        <h3>Siga-nos</h3>
+                        <ul>
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Twitter</a></li>
+                            <li><a href="#">Instagram</a></li>
+                        </ul>
+                    </div>
                     <!-- Aqui vai o seu rodapé -->
+                    <p>&copy; 2024 Centro Médico Vida Plena. Todos os direitos reservados.</p>
                 </div>
             </div>
         </div>
