--- a/sobreCinica.html
+++ b/sobreCinica.html
@@ -26,13 +26,26 @@
                 </div>
         
                 <div class="content">
-                    Content
                     <!-- Aqui vai o seu conteúdo -->
+                    <h1>Centro Médico Vida Plena</h1>
+                    <p style="text-align: justify;">O Centro Médico Vida Plena é uma clínica dedicada a fornecer cuidados de saúde abrangentes e personalizados para indivíduos e famílias. Localizada em um ambiente acolhedor e moderno, nossa clínica oferece uma variedade de serviços médicos para atender às necessidades de pacientes de todas as idades.</p>
+                    <p style="text-align: justify;">Nossos profissionais altamente qualificados incluem médicos de família, especialistas em diversas áreas, enfermeiros e terapeutas, todos comprometidos em proporcionar um atendimento compassivo e de qualidade. Desde consultas de rotina até tratamentos especializados, estamos aqui para ajudar nossos pacientes a alcançarem e manterem sua melhor saúde.</p>
+                    <p style="text-align: justify;">Além dos serviços médicos convencionais, o Centro Médico Vida Plena também oferece programas de promoção da saúde e bem-estar, incluindo orientação nutricional, programas de exercícios físicos e apoio emocional. Nosso objetivo é não apenas tratar doenças, mas também capacitar nossos pacientes a viverem vidas plenas e saudáveis.</p>
+                    <p style="text-align: justify;">Independentemente das necessidades de saúde de nossos pacientes, eles podem confiar no Centro Médico Vida Plena para um atendimento personalizado, compreensivo e de confiança. Estamos comprometidos em ser a principal escolha para cuidados de saúde em nossa comunidade.</p>
                 </div>
         
                 <div class="footer">
-                    Footer
                     <!-- Aqui vai o seu rodapé -->
+                    <div>
+                        <h3>Siga-nos</h3>
+                        <ul>
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Twitter</a></li>
+                            <li><a href="#">Instagram</a></li>
+                        </ul>
+                    </div>
+                    <!-- Aqui vai o seu rodapé -->
+                    <p>&copy; 2024 Centro Médico Vida Plena. Todos os direitos reservados.</p>
                 </div>
             </div>
         </div>
