--- a/atendimento.html
+++ b/atendimento.html
@@ -26,8 +26,51 @@
                 </div>
         
                 <div class="content">
-                    Content
                     <!-- Aqui vai o seu conteúdo -->
+                    <h1>Horário de Atendimento</h1>
+                    <p style="text-align: justify;">Na Clínica Médica Vida Plena, estamos comprometidos em fornecer cuidados de saúde excepcionais e abrangentes para nossos pacientes. Nossos serviços incluem consultas médicas, exames laboratoriais, tratamentos especializados e muito mais. Nossa equipe de profissionais dedicados está aqui para ajudá-lo a alcançar e manter sua melhor saúde.</p>
+                    <div>
+                        <h3>Preços</h3>
+                        <table border="1"> <!-- "border="1"" para colocar bordas na tabela, melhor fazer as bordas usando o CSS -->
+                            <thead>
+                                <tr>
+                                    <th>Serviços</th>
+                                    <th>Segunda a Sexta (R$)</th>
+                                    <th>Sábado e Domingo (R$)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Consulta Médica</td>
+                                    <td>R$ 100,00</td>
+                                    <td>R$ 120,00</td>
+                                </tr>
+                                <tr>
+                                    <td>Exame de Sangue</td>
+                                    <td>R$ 50,00</td>
+                                    <td>R$ 60,00</td>
+                                </tr>
+                                <tr>
+                                    <td>Eletrocardiograma</td>
+                                    <td>R$ 80,00</td>
+                                    <td>R$ 90,00</td>
+                                </tr>
+                                <tr>
+                                    <td>Ultrassonografia</td>
+                                    <td>R$ 150,00</td>
+                                    <td>R$ 180,00</td>
+                                </tr>
+                                <tr>
+                                    <td>Consulta Especializada</td>
+                                    <td>R$ 120,00</td>
+                                    <td>R$ 140,00</td>
+                                </tr>
+                            </tbody>
+                        </table>    
+                    </div>
+                    <br>
+                   <div>
+                    <h3>Horários</h3>
                     <table border="1"> <!-- "border="1"" para colocar bordas na tabela, melhor fazer as bordas usando o CSS -->
                         <thead>
                             <tr>
@@ -64,11 +107,21 @@
                             </tr>
                         </tbody>
                     </table>
+                   </div>
                 </div>
         
                 <div class="footer">
-                    Footer
                     <!-- Aqui vai o seu rodapé -->
+                    <div>
+                        <h3>Siga-nos</h3>
+                        <ul>
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Twitter</a></li>
+                            <li><a href="#">Instagram</a></li>
+                        </ul>
+                    </div>
+                    <!-- Aqui vai o seu rodapé -->
+                    <p>&copy; 2024 Centro Médico Vida Plena. Todos os direitos reservados.</p>
                 </div>
             </div>
         </div>
