--- a/contato.html
+++ b/contato.html
@@ -21,14 +21,17 @@
 
             <div class="main">
                 <div class="header">
-                    Header
                     <!-- Aqui vai o seu header -->
+                    <img src="imagem/marca4.jpg" width="1000" alt="marca da Centro Médico Vida Plena"> 
                 </div>
         
                 <div class="content">
                     <!-- Aqui vai o seu conteúdo -->
                     <h2>Os telefones de contato:</h2>
-                    <p>Celular/Whatsapp: (11) 99123-4567</p>
+                    <ul>
+                        <li>Celular/Whatsapp: (11) 99123-4567</li>
+                        <li>Celular/Whatsapp: (11) 99123-4568</li>
+                    </ul>
                     <h2>Endereço:</h2>
                     <p>Rua das Flores, 123</p>
                     <p>Bairro Harmonia</p>
