Atualizando o projeto com imagens no header

--- a/atendimento.html
+++ b/atendimento.html
@@ -31,7 +31,7 @@
                     <p style="text-align: justify;">Na Clínica Médica Vida Plena, estamos comprometidos em fornecer cuidados de saúde excepcionais e abrangentes para nossos pacientes. Nossos serviços incluem consultas médicas, exames laboratoriais, tratamentos especializados e muito mais. Nossa equipe de profissionais dedicados está aqui para ajudá-lo a alcançar e manter sua melhor saúde.</p>
                     <div>
                         <h3>Preços</h3>
-                        <table border="1"> <!-- "border="1"" para colocar bordas na tabela, melhor fazer as bordas usando o CSS -->
+                        <table border="1" width="900" align="center"> <!-- "border="1"" para colocar bordas na tabela, melhor fazer as bordas usando o CSS -->
                             <thead>
                                 <tr>
                                     <th>Serviços</th>
@@ -71,7 +71,7 @@
                     <br>
                    <div>
                     <h3>Horários</h3>
-                    <table border="1"> <!-- "border="1"" para colocar bordas na tabela, melhor fazer as bordas usando o CSS -->
+                    <table border="1" width="900" align="center"> <!-- "border="1"" para colocar bordas na tabela, melhor fazer as bordas usando o CSS -->
                         <thead>
                             <tr>
                                 <th>Serviços</th>
