--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="index.html">Início</a></li>
                     <li><a href="sobreCinica.html">Sobre a clínica</a></li>
-                    <li><a href="atendimento.html">Horário de Atendimento</a></li>
+                    <li><a href="atendimento.html">Atendimento</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
@@ -38,9 +38,9 @@
                     <p>Cidade Nova Esperança - CEP: 12345-678 - UF: SP</p>
             
                     <h3>Como chegar</h3>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d467692.3957974876!2d-46.924971359982955!3d-23.681434543281064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce448183a461d1%3A0x9ba94b08ff335bae!2zU8OjbyBQYXVsbywgU1A!5e0!3m2!1spt-BR!2sbr!4v1708350207390!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d467692.3957974876!2d-46.924971359982955!3d-23.681434543281064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce448183a461d1%3A0x9ba94b08ff335bae!2zU8OjbyBQYXVsbywgU1A!5e0!3m2!1spt-BR!2sbr!4v1708350207390!5m2!1spt-BR!2sbr" width="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
-                    <h3>Nos envie uma mensagem:</h3>
+                    <h3>Envie uma mensagem:</h3>
                     <form>
                         <label fro="">Nome:</label>
                         <input type="text" id="nome" name="nome">
@@ -65,9 +65,7 @@
                     <div>
                         <h3>Siga-nos</h3>
                         <ul>
-                            <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Twitter</a></li>
-                            <li><a href="#">Instagram</a></li>
+                            <li><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="#">Instagram</a></li>
                         </ul>
                     </div>
                     <!-- Aqui vai o seu rodapé -->
