--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="index.html">Início</a></li>
                     <li><a href="sobreCinica.html">Sobre a clínica</a></li>
-                    <li><a href="atendimento.html">Horário de Atendimento</a></li>
+                    <li><a href="atendimento.html">Atendimento</a></li>
                     <li><a href="contato.html">Contato</a></li>
                 </ul>
             </div>
@@ -34,9 +34,7 @@
                     <div>
                         <h3>Siga-nos</h3>
                         <ul>
-                            <li><a href="#">Facebook</a></li>
-                            <li><a href="#">Twitter</a></li>
-                            <li><a href="#">Instagram</a></li>
+                            <li><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="#">Instagram</a></li>
                         </ul>
                     </div>
                     <!-- Aqui vai o seu rodapé -->
