--- a/atendimento.html
+++ b/atendimento.html
@@ -115,7 +115,7 @@
                     <div>
                         <h3>Siga-nos</h3>
                         <ul>
-                            <li><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="#">Instagram</a></li>
+                            <li><a href="#">Facebook</a> - <a href="#">Instagram</a></li>
                         </ul>
                     </div>
                     <!-- Aqui vai o seu rodapé -->
