--- a/contato.html
+++ b/contato.html
@@ -28,10 +28,8 @@
                 <div class="content">
                     <!-- Aqui vai o seu conteúdo -->
                     <h2>Os telefones de contato:</h2>
-                    <ul>
-                        <li>Celular/Whatsapp: (11) 99123-4567</li>
-                        <li>Celular/Whatsapp: (11) 99123-4568</li>
-                    </ul>
+                    <p>Celular/Whatsapp: (11) 99123-4567</p>
+                    <p>Celular/Whatsapp: (11) 99123-4568</p>
                     <h2>Endereço:</h2>
                     <p>Rua das Flores, 123</p>
                     <p>Bairro Harmonia</p>
@@ -65,7 +63,7 @@
                     <div>
                         <h3>Siga-nos</h3>
                         <ul>
-                            <li><a href="#">Facebook</a> - <a href="#">Twitter</a> - <a href="#">Instagram</a></li>
+                            <li><a href="#">Facebook</a> - <a href="#">Instagram</a></li>
                         </ul>
                     </div>
                     <!-- Aqui vai o seu rodapé -->
